deployment-backend.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "backend-api"
  namespace: "nblik"
  labels:
    app: "backend-api"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "backend-api"
  template:
    metadata:
      labels:
        app: "backend-api"
    spec:
      containers:
      - name: "nblik-api-sha256-1"
        resources:
          requests:
            cpu: 2
        image: "asia-south1-docker.pkg.dev/nblik-auth/nblik-api/nblik-api@sha256:0bc3c0dd1c4385635f2f3197093652da844cee868219a82c62a968e44f7ac760"
        command:
        - "./docker_boot.sh"
