deployment-frontend.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "react-frontend"
  namespace: "nblik"
  labels:
    app: "react-frontend"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "react-frontend"
  template:
    metadata:
      labels:
        app: "react-frontend"
    spec:
      containers:
      - name: "nblik-react-1"
        image: "asia-south1-docker.pkg.dev/nblik-auth/nblik-react-frontend/nblik-react:latest"
