deployment-temp.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "ruby-temp"
  namespace: "nblik"
  labels:
    app: "ruby-temp"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "ruby-temp"
  template:
    metadata:
      labels:
        app: "ruby-temp"
    spec:
      containers:
      - name: "nblik-ruby-temp-sha256-1"
        resources:
          requests:
            cpu: 1
        image: "asia-south1-docker.pkg.dev/nblik-auth/nblik-api/nblik-api@sha256:0bc3c0dd1c4385635f2f3197093652da844cee868219a82c62a968e44f7ac760"
        command: ["bundle","exec","rake","test:yest","-u","test"]
