ingress-backend.yaml

apiVersion: "v1"
kind: "Service"
metadata:
  name: "api-backend-service"
  namespace: "nblik"
  labels:
    app: "backend-api"
spec:
  ports:
  - protocol: "TCP"
    port: 8081
    targetPort: 8081
  selector:
    app: "backend-api"
  type: "NodePort"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: "nblik"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-nblik-backend
    networking.gke.io/managed-certificates: nblik-in-staging
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: api-backend-service
      port:
        number: 8081
