ingress-frontend-dev.yaml


apiVersion: v1
kind: Service
metadata:
  name: react-frontend-dev
  namespace: nblik-dev
  labels:
    app: "react-frontend-dev"
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 3001
  selector:
    app: react-frontend-dev
  type: NodePort
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-frontend-dev
  namespace: nblik-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-nblik-frontend
    networking.gke.io/managed-certificates: beta-nblik-com
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: react-frontend-dev
      port:
        number: 8082
