ingress-frontend.yaml


apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: nblik
  labels:
    app: "react-frontend"
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: react-frontend
  type: NodePort
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-frontend
  namespace: nblik
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-nblik-frontend
    networking.gke.io/managed-certificates: nblik-com
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: react-frontend
      port:
        number: 8080
